# peft_streamlit

./: .flake8  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  Makefile  README.md  README_HF.md  app.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci-cd.yml
.streamlit/: config.toml
pages/: 1_LoRA.py  2_DoRA.py  3_AdaLoRA.py  4_IA3.py  4_QLoRA.py  5_Prefix_P_Tuning.py  6_Evaluate_and_Compare.py
peft_utils/: data.py  eval.py  model.py  train.py  viz.py
tests/: test_peft_utils.py
